# nc-bookmark-sync

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
examples/: config.toml
modules/: nc-bookmark-sync.nix
nix/: default.nix  sources.json
src/: lib.rs  main.rs
