[package]
name = "nc-bookmark-sync"
version = "0.1.0"
authors = ["Stefan Boere <s.boere@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0"
toml = "0.5.7"
reqwest = { version = "0.10.8", features = ["blocking", "json"]}
dirs = "3.0.1"
