[package]
name = "nc-bookmark-sync"
version = "0.1.1"
authors = ["Stefan Boere <s.boere@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0"
reqwest = { version = "0.12", features = ["blocking", "json"]}
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8.7"
